# John_Conway_Game_of_life

./: CMakeLists.txt  README.md
game_life/: BMP.c  BMP.h  GameLife.c  GameLife.h  main.c
